--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@
 **/android/gradlew
 **/android/gradlew.bat
 **/android/local.properties
+**/android/app/google-services.json
 **/android/**/GeneratedPluginRegistrant.java
 
 # iOS/XCode related
