--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   table_calendar: ^2.2.1
@@ -23,6 +23,11 @@ dependencies:
   flutter:
     sdk: flutter
     
+  firebase_auth: ^0.15.2
+  google_sign_in: ^4.1.0
+  numberpicker: ^1.1.0
+  connectivity: ^0.4.6+1
+  font_awesome_flutter: ^8.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
