--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,19 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  table_calendar: ^2.2.1
-  pin_view: ^1.0.1
+    google_fonts: ^0.3.2
+    page_transition: "^1.1.5"
+    font_awesome_flutter: ^8.5.0
   
   flutter:
     sdk: flutter
+
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.13.0+1
     
 
   # The following adds the Cupertino Icons font to your application.
