--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,16 +17,21 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-    google_fonts: ^0.3.2
-    page_transition: "^1.1.5"
-    font_awesome_flutter: ^8.5.0
+  google_fonts: ^0.3.2
+  page_transition: "^1.1.5"
+  font_awesome_flutter: ^8.5.0
+  hive: ^1.3.0
+  hive_flutter: ^0.2.1
+  # For OS-specific directory paths
+  path_provider: ^1.3.0
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.13.0+1
   
   flutter:
     sdk: flutter
 
-  firebase_core: ^0.4.0+9
-  firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.13.0+1
+  
     
 
   # The following adds the Cupertino Icons font to your application.
@@ -36,6 +41,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^0.5.1
+  build_runner:
 
 
 # For information on the generic Dart part of this file, see the
