--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   # Miscellaneous
   table_calendar: ^2.2.2
   numberpicker: ^1.1.0
+  flutter_rounded_date_picker: 1.0.0
+  intl: ^0.16.1
 
   flutter:
     sdk: flutter
@@ -76,7 +78,7 @@ flutter:
   
   assets:
     - assets/
-
+    - assets/tabIcons/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
