--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   google_fonts: ^0.3.2
   page_transition: "^1.1.5"
   font_awesome_flutter: ^8.5.0
-  hive: ^1.3.0
-  hive_flutter: ^0.2.1
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
   # For OS-specific directory paths
   path_provider: ^1.3.0
   # Firebase
@@ -33,6 +33,8 @@ dependencies:
   numberpicker: ^1.1.0
   flutter_rounded_date_picker: 1.0.0
   intl: ^0.16.1
+  chopper: ^3.0.1+1
+  provider: ^4.0.4
 
   flutter:
     sdk: flutter
@@ -47,8 +49,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: ^0.5.1
+  hive_generator: ^0.7.0+2
   build_runner:
+  chopper_generator: ^3.0.3
 
 
 # For information on the generic Dart part of this file, see the
